# korean-english-oral-test-data-analysis

./: .gitignore  README.md  api_server.py  docker-compose.yml  frontend_app.py  main.py  pyproject.toml  run_system.sh  start_system.sh  stop_system.sh
airflow/: Dockerfile
airflow/dags/: daily_data_pipeline.py
config/: database.py  s3_config.py
shared/: constants.py  data_models.py
