[project]
name = "kor-eng-data-analy"
version = "0.1.0"
description = "한영 데이터 분석 시스템 - ELT 파이프라인"
requires-python = ">=3.9"
dependencies = [
    # Airflow
    "apache-airflow==2.9.3",
    "apache-airflow-providers-amazon==8.9.0",
    "apache-airflow-providers-postgres==5.6.0",
    # FastAPI
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    # Streamlit
    "streamlit==1.28.1",
    "plotly==5.17.0",
    "pandas==2.1.4",
    # Data processing
    "numpy==1.26.4",
    "scipy==1.11.4",
    "boto3==1.34.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "pyarrow==14.0.1",
    "statsmodels==0.14.5",
    "requests>=2.31.0",
    # Fix for Python 3.12 compatibility
    "setuptools",
    "pendulum>=3.0.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.11.0",
    "flake8==6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "airflow", "config", "dashboard", "shared"]
